# mop

./: .env.example  .gitignore  CLAUDE.md  PYTHON_DEV_GUIDELINES.md  README.md  nixpacks.toml  pyproject.toml
.claude/: settings.local.json
.claude/skills/frontend-debug/: SKILL.md
.claude/skills/python-async-debug/: SKILL.md
.kiro/specs/ally-summary-panel/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/claude-agent-webapp/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: roadmap.md
app/: agent.py  ally.py  auth.py  config.py  db.py  events.py  main.py
app/tools/: __init__.py  _pydantic_tool.py  echo.py  read_url.py
frontend/: app.js  index.html  styles.css
research/: claude-agent-webapp-architecture.md  jj-research.md  learning-from-open-webui.md  open-webui-architecture.md
tests/: test_agent.py  test_ally.py  test_auth.py  test_config.py  test_db.py  test_events.py  test_main_startup.py  test_routes.py  test_streaming.py  test_tools.py
tests_e2e/: conftest.py  test_ally_panel.py  test_spa_shell.py  test_sse_consumer.py
